// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`iOS BpkButtonLink should render correctly 1`] = `
<View
  accessibilityLabel="Lorem ipsum"
  accessible={true}
  isTVSelectable={true}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "opacity": 1,
    }
  }
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "center",
          "minHeight": 32,
        },
      ]
    }
  >
    <Text
      numberOfLines={1}
      style={
        Array [
          Object {
            "color": "rgb(82, 76, 97)",
            "fontFamily": "System",
            "fontSize": 14,
            "fontWeight": "400",
            "letterSpacing": 0.154,
          },
          Object {
            "fontWeight": "600",
          },
          Array [
            Object {
              "color": "rgb(0, 178, 214)",
            },
          ],
        ]
      }
    >
      Lorem ipsum
    </Text>
  </View>
</View>
`;

exports[`iOS BpkButtonLink should render correctly with iconAlignment="leading" 1`] = `
<View
  accessibilityLabel="Lorem ipsum"
  accessible={true}
  isTVSelectable={true}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "opacity": 1,
    }
  }
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "center",
          "minHeight": 32,
        },
        Object {
          "flexDirection": "row-reverse",
        },
      ]
    }
  >
    <Text
      numberOfLines={1}
      style={
        Array [
          Object {
            "color": "rgb(82, 76, 97)",
            "fontFamily": "System",
            "fontSize": 14,
            "fontWeight": "400",
            "letterSpacing": 0.154,
          },
          Object {
            "fontWeight": "600",
          },
          Array [
            Object {
              "color": "rgb(0, 178, 214)",
            },
          ],
        ]
      }
    >
      Lorem ipsum
    </Text>
    <Text
      allowFontScaling={false}
      style={
        Array [
          Object {
            "color": "rgb(82, 76, 97)",
            "fontFamily": "BpkIcon",
            "fontSize": 24,
            "includeFontPadding": false,
          },
          Object {
            "fontSize": 16,
          },
          Array [
            Object {
              "color": "rgb(0, 178, 214)",
              "marginLeft": 4,
            },
            Object {
              "marginLeft": 0,
              "marginRight": 4,
            },
          ],
        ]
      }
    >
      
    </Text>
  </View>
</View>
`;

exports[`iOS BpkButtonLink should render correctly with iconAlignment="trailing" 1`] = `
<View
  accessibilityLabel="Lorem ipsum"
  accessible={true}
  isTVSelectable={true}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "opacity": 1,
    }
  }
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "center",
          "minHeight": 32,
        },
      ]
    }
  >
    <Text
      numberOfLines={1}
      style={
        Array [
          Object {
            "color": "rgb(82, 76, 97)",
            "fontFamily": "System",
            "fontSize": 14,
            "fontWeight": "400",
            "letterSpacing": 0.154,
          },
          Object {
            "fontWeight": "600",
          },
          Array [
            Object {
              "color": "rgb(0, 178, 214)",
            },
          ],
        ]
      }
    >
      Lorem ipsum
    </Text>
    <Text
      allowFontScaling={false}
      style={
        Array [
          Object {
            "color": "rgb(82, 76, 97)",
            "fontFamily": "BpkIcon",
            "fontSize": 24,
            "includeFontPadding": false,
          },
          Object {
            "fontSize": 16,
          },
          Array [
            Object {
              "color": "rgb(0, 178, 214)",
              "marginLeft": 4,
            },
          ],
        ]
      }
    >
      
    </Text>
  </View>
</View>
`;

exports[`iOS BpkButtonLink should render correctly with text props provided 1`] = `
<View
  accessibilityLabel="Lorem ipsum"
  accessible={true}
  isTVSelectable={true}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "opacity": 1,
    }
  }
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "center",
          "minHeight": 32,
        },
      ]
    }
  >
    <Text
      allowFontScaling={false}
      numberOfLines={1}
      style={
        Array [
          Object {
            "color": "rgb(82, 76, 97)",
            "fontFamily": "System",
            "fontSize": 14,
            "fontWeight": "400",
            "letterSpacing": 0.154,
          },
          Object {
            "fontWeight": "600",
          },
          Array [
            Object {
              "color": "rgb(0, 178, 214)",
            },
          ],
        ]
      }
    >
      Lorem ipsum
    </Text>
  </View>
</View>
`;

exports[`iOS BpkButtonLink should render correctly with theme prop 1`] = `
<View
  accessibilityLabel="Lorem ipsum"
  accessible={true}
  isTVSelectable={true}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "opacity": 1,
    }
  }
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "center",
          "minHeight": 32,
        },
      ]
    }
  >
    <Text
      numberOfLines={1}
      style={
        Array [
          Object {
            "color": "rgb(82, 76, 97)",
            "fontFamily": "System",
            "fontSize": 14,
            "fontWeight": "400",
            "letterSpacing": 0.154,
          },
          Object {
            "fontWeight": "600",
          },
          Array [
            Object {
              "color": "rgb(0, 178, 214)",
            },
            Object {
              "color": "red",
            },
          ],
        ]
      }
    >
      Lorem ipsum
    </Text>
  </View>
</View>
`;

exports[`iOS BpkButtonLink should support elements as icons 1`] = `
<View
  accessibilityLabel="Lorem ipsum"
  accessible={true}
  isTVSelectable={true}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "opacity": 1,
    }
  }
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "center",
          "minHeight": 32,
        },
      ]
    }
  >
    <Text
      numberOfLines={1}
      style={
        Array [
          Object {
            "color": "rgb(82, 76, 97)",
            "fontFamily": "System",
            "fontSize": 14,
            "fontWeight": "400",
            "letterSpacing": 0.154,
          },
          Object {
            "fontWeight": "600",
          },
          Array [
            Object {
              "color": "rgb(0, 178, 214)",
            },
          ],
        ]
      }
    >
      Lorem ipsum
    </Text>
    <Text
      style={
        Array [
          Object {
            "color": "rgb(82, 76, 97)",
            "fontFamily": "System",
            "fontSize": 16,
            "fontWeight": "400",
            "letterSpacing": 0.12,
          },
          Object {},
        ]
      }
    >
      foo
    </Text>
  </View>
</View>
`;

exports[`iOS BpkButtonLink should support overwriting styles 1`] = `
<View
  accessibilityLabel="Lorem ipsum"
  accessible={true}
  isTVSelectable={true}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "opacity": 1,
      "width": 4,
    }
  }
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "center",
          "minHeight": 32,
        },
      ]
    }
  >
    <Text
      numberOfLines={1}
      style={
        Array [
          Object {
            "color": "rgb(82, 76, 97)",
            "fontFamily": "System",
            "fontSize": 14,
            "fontWeight": "400",
            "letterSpacing": 0.154,
          },
          Object {
            "fontWeight": "600",
          },
          Array [
            Object {
              "color": "rgb(0, 178, 214)",
            },
          ],
        ]
      }
    >
      Lorem ipsum
    </Text>
  </View>
</View>
`;

exports[`iOS BpkButtonLink should support the "disabled" property 1`] = `
<View
  accessibilityLabel="Lorem ipsum"
  accessible={true}
  isTVSelectable={true}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "opacity": 1,
    }
  }
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "center",
          "minHeight": 32,
        },
      ]
    }
  >
    <Text
      numberOfLines={1}
      style={
        Array [
          Object {
            "color": "rgb(82, 76, 97)",
            "fontFamily": "System",
            "fontSize": 14,
            "fontWeight": "400",
            "letterSpacing": 0.154,
          },
          Object {
            "fontWeight": "600",
          },
          Array [
            Object {
              "color": "rgb(0, 178, 214)",
            },
            Object {
              "color": "rgb(178, 174, 189)",
            },
          ],
        ]
      }
    >
      Lorem ipsum
    </Text>
  </View>
</View>
`;

exports[`iOS BpkButtonLink should support the "icon" property 1`] = `
<View
  accessibilityLabel="Lorem ipsum"
  accessible={true}
  isTVSelectable={true}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "opacity": 1,
    }
  }
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "center",
          "minHeight": 32,
        },
      ]
    }
  >
    <Text
      numberOfLines={1}
      style={
        Array [
          Object {
            "color": "rgb(82, 76, 97)",
            "fontFamily": "System",
            "fontSize": 14,
            "fontWeight": "400",
            "letterSpacing": 0.154,
          },
          Object {
            "fontWeight": "600",
          },
          Array [
            Object {
              "color": "rgb(0, 178, 214)",
            },
          ],
        ]
      }
    >
      Lorem ipsum
    </Text>
    <Text
      allowFontScaling={false}
      style={
        Array [
          Object {
            "color": "rgb(82, 76, 97)",
            "fontFamily": "BpkIcon",
            "fontSize": 24,
            "includeFontPadding": false,
          },
          Object {
            "fontSize": 16,
          },
          Array [
            Object {
              "color": "rgb(0, 178, 214)",
              "marginLeft": 4,
            },
          ],
        ]
      }
    >
      
    </Text>
  </View>
</View>
`;

exports[`iOS should support the "icon" and "large" property 1`] = `
<View
  accessibilityLabel="Lorem ipsum"
  accessible={true}
  isTVSelectable={true}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "opacity": 1,
    }
  }
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "center",
          "minHeight": 32,
        },
        Object {
          "minHeight": 36,
        },
      ]
    }
  >
    <Text
      numberOfLines={1}
      style={
        Array [
          Object {
            "color": "rgb(82, 76, 97)",
            "fontFamily": "System",
            "fontSize": 20,
            "fontWeight": "400",
            "letterSpacing": -0.78,
          },
          Object {
            "fontWeight": "600",
          },
          Array [
            Object {
              "color": "rgb(0, 178, 214)",
            },
          ],
        ]
      }
    >
      Lorem ipsum
    </Text>
    <Text
      allowFontScaling={false}
      style={
        Array [
          Object {
            "color": "rgb(82, 76, 97)",
            "fontFamily": "BpkIcon",
            "fontSize": 24,
            "includeFontPadding": false,
          },
          Array [
            Object {
              "color": "rgb(0, 178, 214)",
              "marginLeft": 4,
            },
          ],
        ]
      }
    >
      
    </Text>
  </View>
</View>
`;

exports[`iOS should support the "large" property 1`] = `
<View
  accessibilityLabel="Lorem ipsum"
  accessible={true}
  isTVSelectable={true}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "opacity": 1,
    }
  }
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "center",
          "minHeight": 32,
        },
        Object {
          "minHeight": 36,
        },
      ]
    }
  >
    <Text
      numberOfLines={1}
      style={
        Array [
          Object {
            "color": "rgb(82, 76, 97)",
            "fontFamily": "System",
            "fontSize": 20,
            "fontWeight": "400",
            "letterSpacing": -0.78,
          },
          Object {
            "fontWeight": "600",
          },
          Array [
            Object {
              "color": "rgb(0, 178, 214)",
            },
          ],
        ]
      }
    >
      Lorem ipsum
    </Text>
  </View>
</View>
`;
